--- a/app/views/admin/messages/_messages.html.haml
+++ b/app/views/admin/messages/_messages.html.haml
@@ -4,14 +4,14 @@
     - 5.times do
       %col{ :class => "even" }
   %tr
-    %th.icon_centered= link_to image_tag("/images/admin/unread_label_icon.png", :alt => "Unread?"), send(current_url, sort_parameters('read_at', params)), :remote => true
-    %th.icon_centered= link_to image_tag("/images/admin/replied_label_icon.png", :alt => "Replied?"), send(current_url, sort_parameters('replied_at', params)), :remote => true
+    %th.icon_centered= link_to image_tag("admin/unread_label_icon.png", :alt => "Unread?"), send(current_url, sort_parameters('read_at', params)), :remote => true
+    %th.icon_centered= link_to image_tag("admin/replied_label_icon.png", :alt => "Replied?"), send(current_url, sort_parameters('replied_at', params)), :remote => true
     %th= link_to "From", send(current_url, sort_parameters('sender_name', params)), :remote => true
     %th= link_to "Date Received", send(current_url, sort_parameters('created_at', params)), :remote => true
     - unless params[:trashed]
       %th
   = render @messages
-  
+
 - if params.key? :all
   .right_links= link_to "View with paginate", send(current_url), :remote => true
 - elsif @messages.total_entries > Message.per_page
