--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -16,7 +16,7 @@
 
   %h4= "Organizing Entities"
   %ul.entities
-    %li.first= link_to image_tag("/images/epfl_logo.png", :alt => "EPFL Logo"), "http://www.epfl.ch", :onclick => 'window.open(this); return false'
+    %li.first= link_to image_tag("epfl_logo.png", :alt => "EPFL Logo"), "http://www.epfl.ch", :onclick => 'window.open(this); return false'
     %li= link_to "TTO #{content_tag(:em, '(Technology Transfer Office)')}".html_safe, "http://sri.epfl.ch", :onclick => 'window.open(this); return false'
     %li.last= link_to "CDM", "http://cdm.epfl.ch", :onclick => 'window.open(this); return false'
 
