--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -7,20 +7,20 @@
 %ul#modules
   = module_box do
     .left
-      = image_tag "/images/photos/gabriel_clerc.jpg", :alt => "Gabriel Clerc"
+      = image_tag "photos/gabriel_clerc.jpg", :alt => "Gabriel Clerc"
       %h4
         = "Gabriel Clerc"
         %em= "Head of EPFL-TTO"
       = link_to "http://tto.epfl.ch/cms/site/sri/lang/en/GClerc_eng_1", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
 
-      = image_tag "/images/photos/natalia_giovannini.jpg", :alt => "Natalia Giovannini"
+      = image_tag "photos/natalia_giovannini.jpg", :alt => "Natalia Giovannini"
       %h4
         = "Natalia Giovannini"
         %em= "Technology Transfer Manager, EPFL-TTO"
       = link_to "http://tto.epfl.ch/cms/site/sri/lang/en/NGiovannini_eng_1", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
-      = image_tag "/images/photos/francoise_chardonnens.jpg", :alt => "Françoise Chardonnens"
+      = image_tag "photos/francoise_chardonnens.jpg", :alt => "Françoise Chardonnens"
       %h4
         = "Françoise Chardonnens"
         %em= "Senior Legal Counsel, EPFL-TTO"
@@ -44,7 +44,7 @@
 
   = module_box do
     .left
-      = image_tag "/images/photos/herve_lebret.jpg", :alt => "Hervé Lebret"
+      = image_tag "photos/herve_lebret.jpg", :alt => "Hervé Lebret"
       %h4
         = "Hervé Lebret"
         %em= "Head of EPFL-Innogrants"
@@ -59,7 +59,7 @@
 
   -#= module_box do
     .left
-      = image_tag "/images/photos/francoise_chardonnens.jpg", :alt => "Françoise Chardonnens"
+      = image_tag "photos/francoise_chardonnens.jpg", :alt => "Françoise Chardonnens"
       %h4
         = "Françoise Chardonnens"
         %em= "Lawyer, Licensing Officer EPFL-TTO"
@@ -75,7 +75,7 @@
 
   = module_box do
     .left
-      = image_tag "/images/photos/andre_catana.jpg", :alt => "André Catana"
+      = image_tag "photos/andre_catana.jpg", :alt => "André Catana"
       %h4
         = "André Catana"
         %em= "Licensing Officer EPFL-TTO"
@@ -91,7 +91,7 @@
 
   = module_box do
     .left
-      = image_tag "/images/photos/mehdi_aminian.jpg", :alt => "Mehdi Aminian"
+      = image_tag "photos/mehdi_aminian.jpg", :alt => "Mehdi Aminian"
       %h4
         = "Mehdi Aminian"
         %em= "Licensing Officer EPFL-TTO"
@@ -107,15 +107,13 @@
 
   = module_box do
     .left
-      -#= image_tag "/images/photos/andrea_crottini.jpg", :alt => "Andrea Crottini"
-      = image_tag image_path("photos/andrea_crottini.jpg"), :alt => "Andrea Crottini"
+      = image_tag "photos/andrea_crottini.jpg", :alt => "Andrea Crottini"
       %h4
         = "Andrea Crottini"
         %em= "Licensing Officer EPFL-TTO"
       = link_to "http://tto.epfl.ch/cms/site/sri/lang/en/ACrottini_eng_1", :class => "bio", :onclick => "window.open(this); return false" do
         %span= "Biography"
-      -#= image_tag "/images/photos/mauro_lattuada.jpg", :alt => "Mauro Lattuada"
-      = image_tag image_path("photos/mauro_lattuada.jpg"), :alt => "Mauro Lattuada"
+      = image_tag "photos/mauro_lattuada.jpg", :alt => "Mauro Lattuada"
       %h4
         = "Mauro Lattuada"
         %em= "Licensing Officer EPFL-TTO"
