--- a/app/views/admin/users/_user.html.haml
+++ b/app/views/admin/users/_user.html.haml
@@ -1,7 +1,7 @@
 %tr[user]{ :class => cycle("", "alt") }
   %td
-    = link_to image_tag("/images/admin/selected.png", :alt => "selected"), admin_user_path(user) if user.selected?
-  %td.gender= link_to image_tag("/images/admin/#{user.gender}.png", :alt => user.gender), admin_user_path(user)
+    = link_to image_tag("admin/selected.png", :alt => "selected"), admin_user_path(user) if user.selected?
+  %td.gender= link_to image_tag("admin/#{user.gender}.png", :alt => user.gender), admin_user_path(user)
   %td= link_to user.full_name(:reverse => true), admin_user_path(user)
   %td= user.school_and_lab
   %td= user.thesis_supervisor
